objects/gcga__Gift_Aid_Claim_Type__mdt.object
<CustomObject>
    <description>Settings to allow local criteria to be used in Gift Aid Claims</description>
    <fields>
        <fullName>gcga__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Claim Type will appear in the Claim Type picklist in the Gift Aid Claim page</description>
        <inlineHelpText>If checked the Claim Type will appear in the Claim Type picklist in the Gift Aid Claim page</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gcga__Claim_Type_Criteria__c</fullName>
        <description>A where clause to be used when selecting opportunities to be processed as part of a claim.</description>
        <inlineHelpText>A where clause to be used when selecting opportunities to be processed as part of a claim e.g. Payment_Method__c=&apos;SMS&apos; AND &apos;Amount&gt;1000. The field must be on opportunity.</inlineHelpText>
        <label>Claim Type Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gcga__Claim_Type_Short_Name__c</fullName>
        <description>A short name for the claim type that will appear in the Claim Type Picklist on the Gift Aid Claim page</description>
        <inlineHelpText>A short name for the claim type that will appear in the Claim Type Picklist on the Gift Aid Claim page</inlineHelpText>
        <label>Claim Type Short Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Gift Aid Claim Type</label>
    <pluralLabel>Gift Aid Claim Types</pluralLabel>
</CustomObject>